--- a/index.html
+++ b/index.html
@@ -42,66 +42,34 @@
     <table border="1">
       <thead>
         <tr>
-          <th colspan="4">Regional Sales Q1</th>
+          <th colspan="3">My favorite Stuffs</th>
         </tr>
         <tr>
-          <th>Region</th>
-          <th>Sales Person</th>
-          <th>Amount</th>
-          <th>Total</th>
+          <th>Books</th>
+          <th>Movies</th>
+          <th>Television</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>North-West</td>
-          <td>Tim</td>
-          <td>$3,000</td>
-          <td>$24,700</td>
+          <td>Comic</td>
+          <td>Kurosawa movies</td>
+          <td>The Americans</td>
         </tr>
         <tr>
-          <td>South-East</td>
-          <td>Ashley</td>
-          <td>$1,500</td>
+          <td>Little Black</td>
+          <td>Old Westerns</td>
+          <td>Twilight Zone</td>
         </tr>
         <tr>
-          <td>South-West</td>
-          <td>Jeff</td>
-          <td>$1,000</td>
-        </tr>
-        <tr>
-          <td>North-West</td>
-          <td>Sarah</td>
-          <td>$4,000</td>
-        </tr>
-        <tr>
-          <td>North-East</td>
-          <td>Alex</td>
-          <td>$2,000</td>
-        </tr>
-        <tr>
-          <td>North-East</td>
-          <td>Kevin</td>
-          <td>$5,000</td>
-        </tr>
-        <tr>
-          <td>South-East</td>
-          <td>Patricia</td>
-          <td>$6,300</td>
-        </tr>
-        <tr>
-          <td>South-West</td>
-          <td>Arnold</td>
-          <td>$200</td>
-        </tr>
-        <tr>
-          <td>North-West</td>
-          <td>Lindsay</td>
-          <td>$800</td>
+          <td>Text</td>
+          <td>Evil Dead</td>
+          <td>Rick and Morty</td>
         </tr>
       </tbody>
       <tfoot>
         <tr>
-          <td colspan="4">Q1 Employee Sales By Region</td>
+          <td colspan="4">Check back to see if I like other stuff</td>
         </tr>
       </tfoot>
     </table>
@@ -111,21 +79,21 @@
     <table>
       <thead>
         <tr>
-          <th>Student</th>
           <th>Pet</th>
           <th>Pet Name</th>
+          <th>Description</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Clint</td>
-          <td>Bulldog</td>
-          <td>Biscuit</td>
+          <td>Brindle Whippet</td>
+          <td>Buffy</td>
+          <td>Demure, ninja like, eats garbage</td>
         </tr>
         <tr>
-          <td>Max</td>
-          <td>Black lab</td>
-          <td>Goose</td>
+          <td>White Whippet</td>
+          <td>Marshmallow</td>
+          <td>Pushy, quiet, loves attention, eats garbage</td>
         </tr>
       </tbody>
   
